# Slicer-CUAS

./: CMakeLists.txt
CUASSlicerTools/: CMakeLists.txt  CUASSlicerTools.py
CUASSlicerTools/Resources/UI/: CUASSlicerTools.ui
HistogramLabel/: CMakeLists.txt  HistogramLabel.py
HistogramLabel/Data/: MRBrainTumor1-label.nrrd
LineIntensityProfile/: LineIntensityProfile.py
LineProfile/: LineProfile.py
LineProfile/Resources/UI/: LineProfile.ui
MaxProjectionFilter/: CMakeLists.txt  MaxProjectionFilter.py
